--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,7 @@
     <string name="app_name">Connectmedica-hackaton</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="start_bluetooth_text">Start Bluetooth</string>
+    <string name="press_me">PRESS ME HOLD ME</string>
 
 </resources>
