--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="action_settings">Settings</string>
     <string name="start_bluetooth_text">Start Bluetooth</string>
     <string name="press_me">PRESS ME HOLD ME</string>
+    <string name="title_activity_debug_puff">DebugPuffActivity</string>
 
 </resources>
